--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inherited_store
-description: A widget that only rebuilds the widgets whom depended on the changed data.
-version: 0.1.0
+description: An inherited widget that holds data and rebuilds the widgets whom depend on the changed data.
+version: 0.2.0
 homepage: https://github.com/ali2236/inherited_store
 
 environment:
